# rt-helpdesk

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  __app.py  pyproject.toml  requirements.txt  test.py
backend/app/: app.py  main.py  model.py  pika_cli.py
db/: Dockerfile
db/scripts/: init.sql
frontend/: .dockerignore  .gitignore  Dockerfile  app.py  fetch.__js  fetch.js  index.html  main.css  package-lock.json  package.json  requirements.txt  server.py
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css
frontend/src/components/: FormInput.vue  HeaderWelcome.vue  SupportForm.vue  ThanksResponce.vue  TheSupport.vue  TheWelcome.vue
frontend/src/components/__tests__/: HelloWorld.spec.ts
frontend/src/router/: index.ts
frontend/src/ts/: fetchFunctions.ts  formScripts.ts
frontend/src/views/: SupportView.vue
pgadmin4/: Dockerfile  pgpassfile  servers.json
pgadmin4/sql/: create-table.sql
rabbitmq/: Dockerfile
servicedb/: Dockerfile  __Dockerfile  requirements.txt
servicedb/app/: app.py  db.py  main.py  main2.py  model.py  pika.py  pika_cli.py  schema.py
